xx-sourceip.yaml
kind: Service
apiVersion: v1
metadata:
  name: nginx-ingress
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app: nginx-ingress
