xx-glbc.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: glbc-ingress
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  tls:
  - secretName: tls-secret
